# file-storage

./: Cargo.toml  ISSUES.md  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  pull_request.yml
src/: lib.rs
src/error/: error.rs  error_info.rs  mod.rs  operation.rs  reason.rs
src/local/: delete.rs  exists.rs  is_local_path.rs  list.rs  list_files.rs  local_file_list.rs  local_file_read.rs  local_file_write.rs  mod.rs  read.rs  tests.rs  write_if_not_exists.rs
src/op/: file_list.rs  file_read.rs  file_write.rs  list_files.rs  mod.rs
src/op/file/: mod.rs
src/op/folder/: mod.rs
src/path/: file_path.rs  folder_path.rs  mod.rs  path.rs  storage_path.rs
src/path/construct/: cwd.rs  mod.rs  parse.rs  roots.rs  temp.rs
src/path/convert/: as_ref.rs  deref.rs  from_file.rs  from_file_or_folder.rs  from_folder.rs  mod.rs  to_file.rs  to_file_or_folder.rs  to_folder.rs
src/path/core/: clone.rs  compare.rs  display.rs  mod.rs
src/path/file_op/: delete.rs  exists.rs  mod.rs  read.rs  write.rs
src/path/folder_op/: delete_files.rs  list_files.rs  mod.rs
src/path/imp/: append.rs  append_char.rs  as_ref.rs  base_and_extension.rs  base_extension.rs  clone_with_capacity.rs  compare.rs  construction.rs  conversions.rs  display.rs  file_name.rs  file_or_folder.rs  folder_make_file.rs  is_file_folder.rs  len.rs  make_file_folder.rs  mod.rs  parse.rs  rebase.rs  roots.rs  temp.rs  truncate.rs
src/path/mutate/: append.rs  append_char.rs  make_file.rs  make_folder.rs  mod.rs  truncate.rs
src/path/properties/: base.rs  base_and_extension.rs  base_path.rs  extension.rs  file_name.rs  file_or_folder.rs  is_file.rs  is_file_or_folder.rs  is_folder.rs  len.rs  mod.rs  parent.rs  relative_path.rs
src/path/r2/: delete.rs  exists.rs  list_files.rs  mod.rs
src/path/system/: is_local.rs  is_system.rs  is_unix.rs  is_windows.rs  mod.rs
src/path/util/: is_system.rs  mod.rs
src/system/: mod.rs
src/system/local/: delete.rs  delete_files.rs  exists.rs  list_files.rs  local_path.rs  (+5 more)
tests/: file_util.rs  folder_util.rs  local.rs  r2.rs  util.rs
tests/common/: delete.rs  delete_files.rs  exists.rs  list_files.rs  mod.rs  read.rs  write.rs
(+89 files in other folders)
