[package]
name = "file-storage"
version = "0.0.0"
description = "This library aids in accessing file-like storage."
readme = "README.md"
repository = "https://github.com/nikdeapen/file-storage"
homepage = "https://github.com/nikdeapen/file-storage"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
tempfile = { version = "3.14.0", optional = true }

aws-config = { version = "1.5.9", optional = true }
aws-sdk-s3 = { version = "1.58.0", optional = true }
tokio = { version = "1.41.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
once_cell = { version = "1.20.2", optional = true }
bytes = { version = "1.8.0", optional = true }

[features]
r2 = ["aws-config", "aws-sdk-s3", "tokio/full", "dashmap", "once_cell", "bytes"]
